# depth_face_recognition

./: README.md  bouding_box.py  cmake_install.cmake  project3dtopixel.cpp  requirements.txt
Gltf/: bounding_box.py  bounding_box_2.py  display_3d.py  display_3d_depth.py  display_stl.py  face_detect.py  face_gltf_2_stl.py  generate_embeddings.py  max_min.py  padding.py  siamese_network.py  testing.py  training.py
Pcd/: CMakeCache.txt  CMakeLists.txt  Makefile  conversion.ipynb  face_detect_fix.py  train_test.ipynb
Pcd/change_dimensions/: downsample.py  padding.py  padding_test.py
Pcd/misc/: max_min.py  movedata.py  print_array.py
Pcd/test_set_scripts/: dimensions_fix_test.py  new_depth_test.py
Pcd/train_set_scripts/: dimensions_fix.py
change_dimensions/: upsample.py  upsample_1.py
misc/: clean_data.py
src/: project3dtopixel.cpp
test_set_scripts/: face_detect_dataset_test.py
train_set_scripts/: face_detect_dataset.py  new_depth.py
